# tagcache

./: .gitignore  BUILD_GUIDE.md  Cargo.toml  Cargo.toml.bak  Cross.toml  DEADLOCK_FIX.md  Dockerfile  LICENSE  README.md  RELEASE.md  aggressive_load.sh  conversation_summary.md  credential.txt  debug_config.php  debug_paths.php  debug_test.php  docker-compose.yml  extreme_load.sh  load_test.sh  optimized_perf_test.sh  php_extension_race_analysis.md  quick_perf_test.sh  race_condition_analysis.md  tagcache.conf  tagcache.conf.example  tagcache.sh  tagcache_extreme_load.txt  tagcache_heavy_load.txt  tagcache_sample.txt  tcp_socket_options_analysis.md
.github/workflows/: release-simple.yml  release.yml  test-release.yml
app/: .env.example  .gitignore  README.md  credential.txt  index.html  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  vite.config.ts
app/src/: main.tsx  styles.css
app/src/api/: client.ts
app/src/components/: CpuGauge.tsx  EventsFeed.tsx  KeyTable.tsx  MemoryGauge.tsx  MetricCard.tsx  RightPanel.tsx  TagDistribution.tsx
app/src/pages/: App.tsx  (+7 more)
docker/ubuntu/: Dockerfile  README.md  docker-compose.yml
docker/ubuntux86-64/: Dockerfile  README.md  docker-compose.yml  start-tagcache.sh
docs/: CLI_USAGE.md  HOMEBREW_SUBMISSION.md
examples/php/: test.php
packaging/debian/: postinst  postrm  prerm
packaging/homebrew/: tagcache.rb
packaging/systemd/: tagcache.service
packaging/windows/: tagcache.nsi
php-ext/: .gitignore  AroggaCacheSafe.php  AroggaCache_Fixed.php  ORGANIZATION_SUMMARY.md  README.md  comprehensive_demo.php  config.h.in  config.m4  debug_tags.php  debug_timeout.php  deep_timeout_diagnostic.php  large_data_test.php  performance_profiler.php  precise_debug.php  protocol_deep_dive.php  reproduce_timeout.php  simple_buffer_test.php  targeted_segfault_test.php  test_additional_scenarios.php  test_arogga_cache.php  test_final_demo.php  test_function_returns.php  test_multi_tag_invalidation.php  test_multi_tag_invalidation_v2.php  test_quick_verify.php  test_segfault.php  test_server_commands.php  test_timeout_repro.php  test_with_timeout.sh  thread_safety_test.php
php-ext/bench/: debug_get.php  debug_mixed.php  profile_single_get.php
php-ext/benchmarks/: advanced_protocol_analysis.php  aggressive.php  bench.php  bottleneck_analysis.php  bulk_get_test.php  comprehensive_performance_test.php  corrected.php  debug.php  extreme.php  final.php  max_performance_test.php  optimized_stress_test.php  performance_comparison.php  pipelining_test.php  production_simulation.php  profile.php  quick.php  resource_monitor_test.php  serialization_test.php  simple_debug.php  stress.php  stress_test.php  tcp_bottleneck_analysis.php  tcp_socket_options_test.php  ultimate_performance_test.php  ultra_stress_benchmark.php  ultra_stress_test.php
php-ext/docs/: PERFORMANCE_ANALYSIS_REPORT.md  README.md  SERIALIZATION_STATUS.md  THREAD_SAFETY_FIXES.md
php-ext/examples/: README.md  advanced_features.php  basic_usage.php  bulk_operations.php
php-ext/scripts/: build_with_serializers.sh  configure_build.sh  verify_optimizations.sh
php-ext/src/: tagcache.c  tagcache.h
php-ext/tests/: 001_basic.phpt  001_basic_put_get.phpt  002_tags_stats.phpt  002_types.phpt  003_bulk.phpt  003_bulk_search.phpt  004_tags.phpt  005_ttl.phpt
scripts/: build-all-manual.sh  build-all.sh  build-and-release-complete.sh  build-and-release.sh  cleanup-repo.sh  create-production-release.sh  diagnose-release.sh  fix-github-permissions.sh  generate_tag_cloud.sh  manual-release.sh  populate_cache.sh  release-guide.sh  release.sh  setup-homebrew-tap.sh  setup-release.sh  ubuntu-release.sh  update-homebrew-shas.sh  update-version.sh  upload-ubuntu-assets.sh  verify-distributions.sh
sdk/php/: .gitignore  Readme.md  composer.json  comprehensive_test.php  debug_config_path.php  debug_tag_test.php  demo.php  phpstan.neon  phpunit.xml  phpunit.xml.bak  retry_demo.php  run_tests.php  tcp_test_results.txt
src/: main.rs
tests/: MASSIVE_WORKLOAD.md  deadlock_tests.rs  perf_tests.rs  tcp_vs_http_benchmark.rs
(+90 files in other folders)
