[package]
name = "tagcache"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros", "json"] }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time", "signal", "io-util", "net"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "6.0"
parking_lot = "0.12"
smallvec = "1.13"
ahash = "0.8"
thiserror = "1.0"
bytes = "1.6"
uuid = { version = "1.7", features = ["v4"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
anyhow = "1.0"
rand = "0.8"
chrono = { version = "0.4", features=["clock", "serde"] }
base64 = "0.22"

[dev-dependencies]
sysinfo = "0.30"
hdrhistogram = "7"
once_cell = "1.19"
